ChangeLog for RQL
=================

--
    * #78681: don't crash on column aliases used in outer join
    * #81394: HAVING support in write queries (INSERT,SET,DELETE)
    * when possible, use entity type as translation context of relation
      (break cw < 3.13.10 compat)


2011-09-07  --  0.30.1

    * #74727: allow entity types to end with a capitalized letter
      provided they contain a lower-cased letter



2011-08-05  --  0.30.0
    * #72295: add some missing operators:

        - % (modulo),
        - ^ (power),
        - & (bitwise AND),
        - | (bitwise OR),
        - # (bitwise XOR),
        - << (bitwise left shift),
        - >> (bitwise right shift)

    * #72052: new optional 'optcomparisons' key in variable stinfo, containing
      HAVING comparison nodes where it's used and optional (eg outer
      join)

    * #69185: fix syntax error with unary operators by introducing
      `UnaryExpression` node

    * drop old backward compat for ORDERBY/GROUPBY after where clause

    * fix Comparison.as_string to considerer its optional attribute



2011-07-27  --  0.29.1
    * #70264: remove_group_var renamed into remove_group_term and fixed
      implementation

    * #70416: rql annotator add 'having' list into variable's stinfo, and
      properly update variable graph

    * #71131: as_string doesn't  propagate encoding/kwargs to subqueries

    * #71132: column alias scope should be handled as variable scope, not bound
      to subquery

    * #71157: bad analyze when using functions

    * #71415: needs to allow outer join on rhs of final relation and in HAVING express

    * Select.replace must properly reset old node's parent attribute

    * new undo_modification context manager on select nodes



2011-06-09  --  0.29.0
    * support != operator for non equality

    * support for CAST function

    * support for regexp-based pattern matching using a REGEXP operator

    * may now GROUPBY functions / column number
